# mcp-server

./: .gitignore  .npmignore  .secrets.baseline  CADDY_ACCESS_LOG_PROMPT.md  CATEGORIES.md  CLAUDE.md  Caddyfile  DATANEXUS_CONTEXT_MAY22.md  DATANEXUS_CONTEXT_MAY24.md  DATANEXUS_CONTEXT_MAY30.md  DataNexus_MCP_README.md  Dockerfile  GLAMA_SCORE_PROMPT.md  LICENSE  P3B_FINDINGS.md  P8_FINDINGS_AND_SPRINT9B_DESIGN.md  POSTHOG_PROMPT.md  README.md  SECTION13_PROMPT.md  SECTION13_PROMPT_v2.md  SECURITY.md  SESSION_STARTER.md  SPRINT1_PROMPT.md  SPRINT2_PROMPT.md  SPRINT5_DESIGN.md  SPRINT5_DESIGN_v1_prior.md  SPRINT6_DESIGN.md  SPRINT6_PROMPT.md  SPRINT7_DESIGN.md  SPRINT7_PROMPT.md  SPRINT8A_DESIGN.md  SPRINT8_DESIGN.md  SPRINT8_PROMPT.md  Sprint3_Claude_Code_Prompts.md  TODOS.md  USAGE_INSTRUMENTATION_PROMPT.md  deploy.sh  docker-compose.yml  glama.json  glama_score_05_15.txt  (+7 more)
.github/workflows/: ci.yml
.gstack/deploy-reports/: 2026-05-29-sprint6-deploy.md
.well-known/: mcp-manifest.json
data/: frontend_corpus.json
datanexus/: analytics.py  billing.py  cache.py  config.py  db.py  db_init.py  kev_refresh.py  main.py  schedulers.py  security.py
datanexus/agents/: anomaly_reviewer.py  digest_generator.py  feedback_classifier.py  haiku_classifier.py  schema_monitor.py
feedback/: DEPLOYMENT.md  __init__.py  audit.py  collector.py  config.py  models.py  pre_classifier.py  upstream_monitor.py
payment/: __init__.py  config.py  entitlement.py  tools.py  webhook.py
scripts/: accuracy_test.py  code_review.sh  measure_p99.py
static/: index.html  use-case-cards.html
(+116 files in other folders)
